--- a/home.html
+++ b/home.html
@@ -11,7 +11,37 @@
 </head>
 
 <body onload="check()">
-    <div class="title"> Welcome to the Admin Dashboard! </div>
+    <h2 class="title"> Welcome to the Admin Dashboard! </h2>
+    <div class="navbar">
+        <div class="nav-element"><a href="#">Main Page</a></div>
+        <div class="nav-element"><a href="#">Store</a></div>
+    </div>
+    <div class="container">
+        <div class="existing-products">
+            <img src="./src/merch-sample.png" alt="sample" class="prod-img">
+            <div class="prod-name">Helios-redbull varsity jacket</div>
+        </div>
+        <div class="existing-products">
+            <img src="./src/merch-sample.png" alt="sample" class="prod-img">
+            <div class="prod-name">Helios-redbull varsity jacket</div>
+        </div>
+        <div class="existing-products">
+            <img src="./src/merch-sample.png" alt="sample" class="prod-img">
+            <div class="prod-name">Helios-redbull varsity jacket</div>
+        </div>
+        <div class="existing-products">
+            <img src="./src/merch-sample.png" alt="sample" class="prod-img">
+            <div class="prod-name">Helios-redbull varsity jacket</div>
+        </div>
+        <div class="existing-products">
+            <img src="./src/merch-sample.png" alt="sample" class="prod-img">
+            <div class="prod-name">Helios-redbull varsity jacket</div>
+        </div>
+        <div class="existing-products">
+            <img src="./src/merch-sample.png" alt="sample" class="prod-img">
+            <div class="prod-name">Helios-redbull varsity jacket</div>
+        </div>
+    </div>
 </body>
 
 </html>
