--- a/product.html
+++ b/product.html
@@ -23,7 +23,21 @@
             <div class="size">43</div>
             <div class="size">44</div>
         </div>
+        <div class="input-container">
+            <textarea name="c-name" id="c-name" rows="1" placeholder="Change product name"
+                class="long-textarea"></textarea>
+            <textarea name="c-desc" id="c-desc" rows="1" placeholder="Change product description"
+                class="long-textarea"></textarea>
+            <textarea name="c-img" id="c-img" rows="1" placeholder="Change image link" class="long-textarea"></textarea>
+            <span><textarea name="c-price" id="c-price" rows="1" placeholder="AED 1050 - Change price"
+                    class="short-textarea"></textarea><button class="change">CHANGE</button></span>
+        </div>
     </div>
+    <div class="product-image">
+        <img src="./src/product-image.png" alt="Product Image" class="img">
+        <button class="delete">DELETE</button>
+    </div>
+
 </body>
 
 </html>
