Work on login integration

--- a/product.html
+++ b/product.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Info</title>
     <link rel="stylesheet" href="./styles/product.css">
+    <script src="./scripts/check.js"></script>
 </head>
 
-<body>
+<body onload="check()">
     <div class="navbar">
         <div class="nav-element"><a href="#">Main Page</a></div>
         <div class="nav-element"><a href="#">Store</a></div>
-        <div class="nav-element"><a href="#">Dashboard</a></div>
+        <div class="nav-element"><a href="./home.html">Dashboard</a></div>
     </div>
     <div class="content">
         <h2 class="prod-name">Helios-redbull varsity jacket</h2>
