Products linked with database

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="./styles/home.css">
     <script src="./scripts/check.js"></script>
+    <script src="./scripts/load.js"></script>
 </head>
 
 <body onload="check()">
@@ -16,31 +17,7 @@
         <div class="nav-element"><a href="#">Main Page</a></div>
         <div class="nav-element"><a href="#">Store</a></div>
     </div>
-    <div class="container">
-        <div class="existing-products">
-            <img src="./src/merch-sample.png" alt="sample" class="prod-img">
-            <div class="prod-name">Helios-redbull varsity jacket</div>
-        </div>
-        <div class="existing-products">
-            <img src="./src/merch-sample.png" alt="sample" class="prod-img">
-            <div class="prod-name">Helios-redbull varsity jacket</div>
-        </div>
-        <div class="existing-products">
-            <img src="./src/merch-sample.png" alt="sample" class="prod-img">
-            <div class="prod-name">Helios-redbull varsity jacket</div>
-        </div>
-        <div class="existing-products">
-            <img src="./src/merch-sample.png" alt="sample" class="prod-img">
-            <div class="prod-name">Helios-redbull varsity jacket</div>
-        </div>
-        <div class="existing-products">
-            <img src="./src/merch-sample.png" alt="sample" class="prod-img">
-            <div class="prod-name">Helios-redbull varsity jacket</div>
-        </div>
-        <div class="existing-products">
-            <img src="./src/merch-sample.png" alt="sample" class="prod-img">
-            <div class="prod-name">Helios-redbull varsity jacket</div>
-        </div>
+    <div class="container" id="container">
     </div>
 </body>
 
