--- a/add-product.html
+++ b/add-product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Info</title>
+    <title>Add New Product</title>
     <link rel="stylesheet" href="./styles/products-mod.css">
     <script src="./scripts/check.js"></script>
 </head>
@@ -17,26 +17,22 @@
         <div class="nav-element"><a href="./home.html">Dashboard</a></div>
     </div>
     <div class="content">
-        <h2 id="prod-name">Helios-redbull varsity jacket</h2>
+        <h2>Add New Product</h2>
         <div class="sizes">
-            <div class="size">41</div>
-            <div class="size">42</div>
-            <div class="size">43</div>
-            <div class="size">44</div>
+            <div class="add-size">Add size</div>
         </div>
         <div class="input-container">
-            <textarea name="c-name" id="c-name" rows="1" placeholder="Change product name"
+            <textarea name="c-name" id="c-name" rows="1" placeholder="Product name" class="long-textarea"></textarea>
+            <textarea name="c-desc" id="c-desc" rows="1" placeholder="Product description"
                 class="long-textarea"></textarea>
-            <textarea name="c-desc" id="c-desc" rows="1" placeholder="Change product description"
+            <textarea name="c-img" id="c-img" rows="1" placeholder="Product image link"
                 class="long-textarea"></textarea>
-            <textarea name="c-img" id="c-img" rows="1" placeholder="Change image link" class="long-textarea"></textarea>
             <span><textarea name="c-price" id="c-price" rows="1" placeholder="AED 1050 - Change price"
-                    class="short-textarea"></textarea><button class="change">CHANGE</button></span>
+                    class="short-textarea"></textarea><button class="change">ADD</button></span>
         </div>
     </div>
     <div class="product-image">
         <img src="./src/product-image.png" alt="Product Image" class="img">
-        <button class="delete">DELETE</button>
     </div>
 
 </body>
