--- a/add-product.html
+++ b/add-product.html
@@ -11,30 +11,36 @@
 </head>
 
 <body onload="check()">
-    <div class="navbar">
-        <div class="nav-element"><a href="#">Main Page</a></div>
-        <div class="nav-element"><a href="#">Store</a></div>
-        <div class="nav-element"><a href="./home.html">Dashboard</a></div>
-    </div>
-    <div class="content">
-        <h2>Add New Product</h2>
-        <div class="sizes">
-            <div class="add-size">Add size</div>
+    <form id="newprod">
+        <div class="navbar">
+            <div class="nav-element"><a href="#">Main Page</a></div>
+            <div class="nav-element"><a href="#">Store</a></div>
+            <div class="nav-element"><a href="./home.html">Dashboard</a></div>
         </div>
-        <div class="input-container">
-            <textarea name="c-name" id="c-name" rows="1" placeholder="Product name" class="long-textarea"></textarea>
-            <textarea name="c-desc" id="c-desc" rows="1" placeholder="Product description"
-                class="long-textarea"></textarea>
-            <textarea name="c-img" id="c-img" rows="1" placeholder="Product image link"
-                class="long-textarea"></textarea>
-            <span><textarea name="c-price" id="c-price" rows="1" placeholder="AED 1050 - Change price"
-                    class="short-textarea"></textarea><button class="change">ADD</button></span>
+        <div class="content">
+            <h2>Add New Product</h2>
+            <div class="sizes">
+                <div class="add-size">Add size</div>
+            </div>
+            <div class="input-container">
+                <textarea name="c-name" id="c-name" rows="1" placeholder="Product name"
+                    class="long-textarea"></textarea>
+                <textarea name="c-desc" id="c-desc" rows="1" placeholder="Product description"
+                    class="long-textarea"></textarea>
+                <textarea name="c-img" id="c-img" rows="1" placeholder="Product image link"
+                    class="long-textarea"></textarea>
+                <span>
+                    <textarea name="c-price" id="c-price" rows="1" placeholder="AED 1050 - Change price"
+                        class="short-textarea"></textarea>
+                    <button class="change" onclick="submitData()">ADD</button>
+                </span>
+            </div>
         </div>
-    </div>
-    <div class="product-image">
-        <img src="./src/product-image.png" alt="Product Image" class="img">
-    </div>
-
+        <div class="product-image">
+            <img src="./src/product-image.png" alt="Product Image" class="img">
+        </div>
+    </form>
+    <script src="./scripts/addprod.js"></script>
 </body>
 
 </html>
