--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <a href="#"><img src="./src/home.png" alt="home" class="home"></a>
     <a href="#"><img src="./src/bag.png" alt="shop" class="shop"></a>
     <h1>ADMIN LOGIN</h1>
-    <textarea id="username" name="username" placeholder="username" rows="1"></textarea>
-    <textarea id="password" name="password" placeholder="password" rows="1"></textarea>
+    <input type = "text" id="username"  name="username" placeholder="username"></input>
+    <input type = "password" id="password" name="password" placeholder="password"></input>
     <button onclick="submit()"><img src="./src/parallelogram.png" class="parallelogram" alt="submit"></button>
 </body>
 
