--- a/add-product.html
+++ b/add-product.html
@@ -1,68 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Add New Product</title>
-        <link rel="stylesheet" href="./styles/products-mod.css" />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-        <script src="./scripts/check.js"></script>
-    </head>
 
-    <body onload="check()">
-        <div class="navbar">
-            <div class="nav-element"><a href="#">Main Page</a></div>
-            <div class="nav-element"><a href="#">Store</a></div>
-            <div class="nav-element"><a href="./home.html">Dashboard</a></div>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Add New Product</title>
+    <link rel="stylesheet" href="./styles/products-mod.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="./scripts/check.js"></script>
+</head>
+
+<body onload="check()">
+    <div class="navbar">
+        <div class="nav-element"><a href="#">Main Page</a></div>
+        <div class="nav-element"><a href="#">Store</a></div>
+        <div class="nav-element"><a href="./home.html">Dashboard</a></div>
+    </div>
+    <div class="content">
+        <h2>Add New Product</h2>
+        <div class="sizes">
+            <div class="add-size">Add size</div>
         </div>
-        <div class="content">
-            <h2>Add New Product</h2>
-            <div class="sizes">
-                <div class="add-size">Add size</div>
-            </div>
-            <div class="input-container">
-                <input
-                    name="c-name"
-                    type = "text"
-                    id="c-name"
-                    rows="1"
-                    placeholder="Product name"
-                    class="long-textarea"
-                ></input>
-                <input
-                type = "text"
-                    name="c-desc"
-                    id="c-desc"
-                    placeholder="Product description"
-                    class="long-textarea"
-                ></input>
-                <input
-                type="text"
-                    name="c-img"
-                    id="c-img"
-                    placeholder="Product image link"
-                    class="long-textarea"
-                ></input>
-                <span>
-                    <input
-                    type = "text"
-                        name="c-price"
-                        id="c-price"
-                        placeholder="AED 1050 - Change price"
-                        class="short-textarea"
-                    ></input>
-                    <button class="change">ADD</button>
-                </span>
-            </div>
-            <div class="product-image">
-                <img
-                    src="./src/product-image.png"
-                    alt="Product Image"
-                    class="img"
-                />
-            </div>
+        <div class="input-container">
+            <input name="c-name" type="text" id="c-name" rows="1" placeholder="Product name" class="long-input">
+            <input type="text" name="c-desc" id="c-desc" placeholder="Product description" class="long-input">
+            <input type="text" name="c-img" id="c-img" placeholder="Product image link" class="long-input">
+            <span>
+                <input type="text" name="c-price" id="c-price" placeholder="AED 1050 - Change price"
+                    class="short-input">
+                <button class="change">ADD</button>
+            </span>
         </div>
-        <script src="./scripts/addprod.js"></script>
-    </body>
+    </div>
+    <div class="product-image">
+        <img src="./src/product-image.png" alt="Product Image" class="img" />
+    </div>
+    <script src="./scripts/addprod.js"></script>
+</body>
+
 </html>
