--- a/add-product.html
+++ b/add-product.html
@@ -23,7 +23,7 @@
             <div class="add-size">Add size</div>
         </div>
         <div class="input-container">
-            <input name="c-name" type="text" id="c-name" rows="1" placeholder="Product name" class="long-input">
+            <input name="c-name" type="text" id="c-name" placeholder="Product name" class="long-input">
             <input type="text" name="c-desc" id="c-desc" placeholder="Product description" class="long-input">
             <input type="text" name="c-img" id="c-img" placeholder="Product image link" class="long-input">
             <span>
