--- a/product.html
+++ b/product.html
@@ -25,11 +25,10 @@
             <div class="size">44</div>
         </div>
         <div class="input-container">
-            <input type='text' name="c-name" id="c-name" rows="1" placeholder="Change product name" class="long-input">
-            <input type='text' name="c-desc" id="c-desc" rows="1" placeholder="Change product description"
-                class="long-input">
-            <input type='text' name="c-img" id="c-img" rows="1" placeholder="Change image link" class="long-input">
-            <span><input type='text' name="c-price" id="c-price" rows="1" placeholder="AED 1050 - Change price"
+            <input type='text' name="c-name" id="c-name" placeholder="Change product name" class="long-input">
+            <input type='text' name="c-desc" id="c-desc" placeholder="Change product description" class="long-input">
+            <input type='text' name="c-img" id="c-img" placeholder="Change image link" class="long-input">
+            <span><input type='text' name="c-price" id="c-price" placeholder="AED 1050 - Change price"
                     class="short-input"><button class="change">CHANGE</button></span>
         </div>
     </div>
