changed how hyperlinks work

--- a/product.html
+++ b/product.html
@@ -28,8 +28,11 @@
             <input type='text' name="c-name" id="c-name" placeholder="Change product name" class="long-input">
             <input type='text' name="c-desc" id="c-desc" placeholder="Change product description" class="long-input">
             <input type='text' name="c-img" id="c-img" placeholder="Change image link" class="long-input">
-            <span><input type='text' name="c-price" id="c-price" placeholder="AED 1050 - Change price"
-                    class="short-input"><button class="change">CHANGE</button></span>
+            <span>
+                <input type='text' name="c-price" id="c-price" placeholder="AED 1050 - Change price"
+                    class="short-input">
+                <button class="change">CHANGE</button>
+            </span>
         </div>
     </div>
     <div class="product-image">
